--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.4"
   },
   "scripts": {
